# typed-registers

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/typed_registers/: __init__.py
src/typed_registers/bus/: __init__.py  protocol.py  smbus.py
src/typed_registers/register/: __init__.py  base.py  block.py  byte.py  int24.py  int32.py
